Bug 549270: Read the font substitutions from the registry and use them when looking up font names. r=jdaggett